--- a/MachineVisionConsole/MachineVisionConsole.vcxproj.filters
+++ b/MachineVisionConsole/MachineVisionConsole.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="MatchTemplate.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Canny.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
