--- a/Demo/packages.config
+++ b/Demo/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
-  <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
+  <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net461" />
+  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net461" />
+  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net461" />
 </packages>
