--- a/MachineVisionConsole/MachineVisionConsole.vcxproj
+++ b/MachineVisionConsole/MachineVisionConsole.vcxproj
@@ -132,7 +132,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
@@ -151,6 +151,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="calibrate.cpp" />
+    <ClCompile Include="canlibration.cpp" />
     <ClCompile Include="Canny.cpp" />
     <ClCompile Include="MachineVisionConsole.cpp" />
     <ClCompile Include="MatchTemplate.cpp" />
